<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

            <TextView
                android:id="@+id/user_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/method_payment_info"
                android:textAlignment="center"
                android:textColor="#000"
                android:layout_marginBottom="20dp"
                android:textSize="14sp" />

    </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/mobile_money_tab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/add_mtn_mobile_money" />
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/orange_money_tab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/add_orange_money" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/bank_tab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/add_bank_card" />

        </LinearLayout>

</LinearLayout>

</ScrollView>